--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Moment==0.5.1
 Flask-Script==2.0.5
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
