--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
+alembic==0.9.7
 click==6.7
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-Migrate==1.8.0
 Flask-Moment==0.5.1
 Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
+Mako==1.0.7
 MarkupSafe==1.0
+psycopg2==2.7.3.2
+python-dateutil==2.6.1
+python-editor==1.0.3
+six==1.11.0
+SQLAlchemy==1.2.1
 visitor==0.1.3
 Werkzeug==0.12.2
