--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+new_env/
 
 # Spyder project settings
 .spyderproject
@@ -104,3 +105,4 @@ venv.bak/
 .mypy_cache/
 venv/pip-selfcheck.json
 .idea
+
