--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,19 @@ Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+get==0.0.38
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+post==0.0.26
 psycopg2==2.7.3.2
+public==0.0.65
 python-dateutil==2.6.1
 python-editor==1.0.3
+query-string==0.0.28
+request==0.0.26
 six==1.11.0
 SQLAlchemy==1.2.1
 visitor==0.1.3
